--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/isciler
-spring.datasource.username=root
-spring.datasource.password=64125494944
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_name
+spring.datasource.username=username
+spring.datasource.password=password
